# pytrajplot

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .mch-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  Jenkinsfile  MANIFEST.in  Makefile  Makefile.conda.mk  Makefile.pip-venv.mk  README.md  README.rst  README.rst2  USAGE.md  USAGE.txt  dev-environment.yml  environment.yml  makefile  pyproject.toml  setup.py  sonar-project.properties  start_data.csv  tox.ini  trajectory_data.csv  trajectory_data_2.csv
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: pre-commit.yml  pytest.yml
doc/: conf.py  index.rst
doc/_static/: README.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
jenkins/: Jenkinsfile
pytrajplot/: __init__.py  aws_wrapper.py  cli.py  generate_pdf.py  main.py  parse_data.py  s3_utils.py  utils.py
pytrajplot/parsing/: __init__.py  plot_info.py
pytrajplot/plotting/: analyse_trajectories.py  plot_altitude.py  plot_info_header.py  plot_map.py  plot_utils.py
requirements/: dev-environment.yml  dev-requirements.txt  environment.yml  requirements-gha.txt  requirements.in  requirements.txt  requirements.yml
scripts/: daily_run.sh
src/pytrajplot/: __init__.py  assemble_pdf.py  cli.py  cli_original.py  generate_pdf.py  generate_pdf_old.py  get_data.py  parse_data.py  plot_altitude.py  plot_info_header.py  plot_map.py  plot_map_and_altitude.py
test/: conftest.py  test_pytrajplot.sh  test_recent_opr.sh
test/integration/: test_main.py  test_pytrajplot.sh  test_recent_opr.sh
test/pytrajplot/: test_cli.py
test/test_exception/: tra_geom_000-048F
tests/: test_pytrajplot.sh  test_recent_opr.sh
tools/: run-mypy.sh  setup_env.sh
(+95 files in other folders)
