[tool.poetry]
name = "pytrajplot"
version = "2.0.0"
license = "BSD-3-Clause"
authors = ["Pirmin Kaufmann <pirmin.kaufmann@meteoswiss.ch>"]
description = "Plot LAGRANTO trajectories starting/ending at the same location on a map together with vertical cross sections"
readme = "README.rst"
packages = [
    { include = "pytrajplot" },
]
[[tool.poetry.source]]
name = "meteoswiss"
url = "https://service.meteoswiss.ch/nexus/repository/python-all/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.13"
click = "^8.2.1"
mchpy = "^4.0.0"
cartopy = "^0.25.0"
matplotlib = "^3.10.7"
numpy = "^2.3.5"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.18.1"
pydata-sphinx-theme = "^0.16.1"
pylint = "^3.3.8"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
yapf = "^0.43.0"

[tool.poetry.scripts]
pytrajplot = "pytrajplot.main:cli"

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pylint.master]
disable = [
    'C0114', # missing-module-docstring
    'C0115', # missing-class-docstring
    'C0116', # missing-function-docstring
    'W0511', # fix me or to-do comments are already covered by SonarQube
]

[tool.pylint.basic]
argument-naming-style = 'any'
attr-naming-style = 'any'

[tool.pylint.format]
# Maximum number of lines in a module.
max-line-length = 120

[tool.pylint.design]
# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
omit = ["test/**",  "doc/**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
